# error-stack-macros2

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  clippy.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs.yml  feature-request.yml
.github/workflows/: publish.yml  syncLabels.yml  test.yml  testToStable.yml
impl/: Cargo.toml
impl/src/: lib.rs
impl/src/types/: mod.rs  util.rs
impl/src/types/fmt/: input.rs  mod.rs  util.rs
impl/src/util/: traits.rs
src/: lib.rs
src/types/: format_args.rs  mod.rs
src/types/fmt/: input.rs  mod.rs
src/util/: traits.rs
tests/: Cargo.toml
tests/src/: enum_variants.rs  enums.rs  lib.rs  structs.rs
