[package]
name = "error-stack-macros2-tests"
version = "0.0.0-reserved"
authors = ["LuisFerLCC"]
edition = "2024"
rust-version = "1.90.0"
publish = false

[dependencies]
error-stack = "0.6.0"
error-stack-macros2 = { path = "../impl" }

[lints.rust]
single_use_lifetimes = "warn"
unconditional_recursion = "deny"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"
unused_lifetimes = "warn"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
